# oh-my-pi

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  Cargo.toml  README.md  biome.json  bunfig.toml  out.html  package-lock.json  package.json  tsconfig.base.json
.claude/commands/: release.md
.github/workflows/: ci.yml
.omp/commands/: triage.md
.omp/skills/system-prompts/: SKILL.md
.pi/commands/: review.md
.pi/hooks/: status-demo.ts  test-command.ts
crates/brush-builtins-vendored/: Cargo.toml
crates/brush-builtins-vendored/src/: read.rs
crates/brush-core-vendored/src/: commands.rs  openfiles.rs
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: appearance.rs  ast.rs  clipboard.rs  fd.rs  glob.rs  glob_util.rs  grep.rs  highlight.rs  image.rs  keys.rs  lib.rs  projfs_overlay.rs  ps.rs  pty.rs  shell.rs  text.rs  utils.rs
crates/pi-natives/src/language/: mod.rs  parsers.rs
crates/pi-natives/src/shell/: windows.rs
docs/: custom-tools.md  environment-variables.md  memory.md  models.md  node-bundling.md  porting-from-pi-mono.md  resolve-tool-runtime.md  skills.md
scripts/: build-dist.ts  install.ps1  install.sh  release.ts
scripts/install-tests/: binary.dockerfile  run-ci.sh  source.dockerfile  tarball.dockerfile
