[package]
name = "pi-natives"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
napi = { version = "3", features = ["napi10", "tokio_rt", "tokio_time"] }
napi-derive = "3"
brush-core = { version = "0.4.0", path = "../brush-core-vendored", optional = true }
brush-builtins = { version = "0.1.0", path = "../brush-builtins-vendored", optional = true }
parking_lot = "0.12.5"
dashmap = "6.1"
clap = { version = "4", features = ["derive"] }
os_pipe = "1"
portable-pty = { version = "0.9", optional = true }
grep-regex = { version = "0.1", optional = true }
grep-searcher = { version = "0.1", optional = true }
grep-matcher = { version = "0.1", optional = true }
globset = "0.4"
ignore = "0.4"
rayon = "1.10"
ast-grep-core = { version = "0.39", default-features = false, features = ["tree-sitter"], optional = true }
tree-sitter = { version = "0.25", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-diff = { version = "0.1", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
tree-sitter-hcl = { version = "1.1", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-json = { version = "0.23", optional = true }
tree-sitter-julia = { version = "0.23", optional = true }
tree-sitter-kotlin = { version = "0.4", package = "tree-sitter-kotlin-sg", optional = true }
tree-sitter-lua = { version = "0.2", optional = true }
tree-sitter-make = { version = "1.1", optional = true }
tree-sitter-md = { version = "0.5", optional = true }
tree-sitter-nix = { version = "0.3", optional = true }
tree-sitter-objc = { version = "3.0", optional = true }
tree-sitter-odin = { version = "1.3", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-regex = { version = "0.25", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-scala = { version = "0.24", optional = true }
tree-sitter-solidity = { version = "1.2", optional = true }
tree-sitter-starlark = { version = "1.3", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-verilog = { version = "1.0", optional = true }
tree-sitter-xml = { version = "0.7", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-zig = { version = "1.1", optional = true }
inferno = { version = "0.12", default-features = false }
image = { version = "0.25", default-features = false, features = [
   "png",
   "jpeg",
   "gif",
   "webp",
], optional = true }
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
icy_sixel = { version = "0.5", optional = true }
unicode-segmentation = "1.11"
unicode-width = "0.2"
syntect = { version = "5.3", default-features = false, features = [
   "default-syntaxes",
   "default-themes",
   "regex-fancy",
], optional = true }
html-to-markdown-rs = { version = "2.24", default-features = false }
phf = { version = "0.13", features = ["macros"] }
smallvec = { version = "1.15.1", features = [
   "serde",
   "write",
   "union",
   "specialization",
   "const_new",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["full"]
full = [
   "syntax-highlighting",
   "structural-search-native",
   "image",
   "shell-native",
   "text-search-native",
]

# Syntax highlighting using syntect (large binary size)
syntax-highlighting = ["dep:syntect"]

# Image processing and Sixel encoding (medium binary size)
image = ["dep:image", "dep:icy_sixel"]

# Structural search (ast-grep) - Native (very large) or System (small)
structural-search-native = [
   "dep:ast-grep-core",
   "dep:tree-sitter",
   "dep:tree-sitter-bash",
   "dep:tree-sitter-c",
   "dep:tree-sitter-c-sharp",
   "dep:tree-sitter-cpp",
   "dep:tree-sitter-css",
   "dep:tree-sitter-diff",
   "dep:tree-sitter-elixir",
   "dep:tree-sitter-go",
   "dep:tree-sitter-haskell",
   "dep:tree-sitter-hcl",
   "dep:tree-sitter-html",
   "dep:tree-sitter-java",
   "dep:tree-sitter-javascript",
   "dep:tree-sitter-json",
   "dep:tree-sitter-julia",
   "dep:tree-sitter-kotlin",
   "dep:tree-sitter-lua",
   "dep:tree-sitter-make",
   "dep:tree-sitter-md",
   "dep:tree-sitter-nix",
   "dep:tree-sitter-objc",
   "dep:tree-sitter-odin",
   "dep:tree-sitter-php",
   "dep:tree-sitter-python",
   "dep:tree-sitter-regex",
   "dep:tree-sitter-ruby",
   "dep:tree-sitter-rust",
   "dep:tree-sitter-scala",
   "dep:tree-sitter-solidity",
   "dep:tree-sitter-starlark",
   "dep:tree-sitter-swift",
   "dep:tree-sitter-toml-ng",
   "dep:tree-sitter-typescript",
   "dep:tree-sitter-verilog",
   "dep:tree-sitter-xml",
   "dep:tree-sitter-yaml",
   "dep:tree-sitter-zig",
]
structural-search-system = []

# Shell execution - Native (brush-core) or System (bash)
shell-native = ["dep:brush-core", "dep:brush-builtins", "dep:portable-pty"]
shell-system = []

# Text search (grep) - Native (grep crates) or System (rg)
text-search-native = ["dep:grep-regex", "dep:grep-searcher", "dep:grep-matcher"]
text-search-system = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

windows-sys = { version = "0.61", features = [
   "Win32_Foundation",
   "Win32_Storage_ProjectedFileSystem",
   "Win32_System_Com",
   "Win32_System_LibraryLoader",
] }

[build-dependencies]
napi-build = "2"
